# rspm

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml  rust.yml
examples/: com.rspm.daemon.plist  ecosystem.yaml  linux-install.sh  macos-install.sh  process.json  process.toml  process.yaml  rspmd.service  windows-install.bat
rspm-cli/: Cargo.toml
rspm-cli/src/: main.rs
rspm-cli/src/client/: grpc_client.rs  mod.rs
rspm-cli/src/commands/: daemon.rs  delete.rs  init.rs  list.rs  load.rs  logs.rs  mod.rs  restart.rs  scale.rs  schedule.rs  serve.rs  service.rs  show.rs  start.rs  status.rs  stop.rs
rspm-cli/src/utils/: table.rs
rspm-common/: Cargo.toml
rspm-common/src/: config.rs  config_format.rs  config_loader.rs  constants.rs  daemon_config.rs  error.rs  lib.rs  process.rs  schedule.rs  static_server.rs  table.rs  utils.rs
rspm-daemon/: Cargo.toml  build.rs
rspm-daemon/src/: lib.rs  main.rs
rspm-daemon/src/config_watcher/: mod.rs
rspm-daemon/src/log_watcher/: log_writer.rs  mod.rs
rspm-daemon/src/manager/: managed_process.rs  mod.rs  process_manager.rs  state_store.rs
rspm-daemon/src/monitor/: mod.rs  monitor.rs
rspm-daemon/src/scheduler/: mod.rs  scheduler.rs
rspm-daemon/src/server/: grpc.rs  mod.rs
rspm-daemon/src/static_server/: manager.rs  mod.rs
rspm-daemon/src/web/: api.rs  mod.rs  server.rs
rspm-daemon/static/: app.js  icons.js  index.html  styles.css
rspm-proto/: Cargo.toml  build.rs
rspm-proto/proto/: rspm.proto
rspm-proto/src/: lib.rs
skills/process-scheduler/: SKILL.md
