[package]
name = "rspm-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "rspm"
path = "src/main.rs"

[dependencies]
rspm-common = { path = "../rspm-common" }
rspm-proto = { path = "../rspm-proto" }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tonic = "0.14"
tower = "0.5"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
colored = "3"
chrono = "0.4"
hyper-util = "0.1"
http = "1"
serde_json = "1"
serde_yaml = "0.9"
toml = "1"
dirs = "6"
