[package]
name = "rspm-common"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
thiserror = "2"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
croner = "3"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate"] }
dirs = "6"
colored = "3"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
