[package]
name = "rspm-daemon"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "rspmd"
path = "src/main.rs"

[dependencies]
rspm-common = { path = "../rspm-common" }
rspm-proto = { path = "../rspm-proto" }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tonic = "0.14"
prost = "0.14"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
tokio-cron-scheduler = { version = "0.15", features = ["signal"] }
notify = "7"                                                                 # File watcher
toml = "0.8"
sysinfo = "0.33"                                                             # System info for monitoring
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono"] }
dirs = "6"                                                                   # For getting home directory
axum = { version = "0.8", features = ["ws"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["fs", "cors"] }
clap = { version = "4", features = ["derive"] }

# Release 模式下嵌入静态文件到可执行文件
rust-embed = { version = "8", optional = true }

[features]
default = []
embed-static = ["rust-embed"]

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_System_Console", "Win32_Foundation"] }

[dev-dependencies]
tempfile = "3"
